--- a/src/plugin.scss
+++ b/src/plugin.scss
@@ -7,3 +7,13 @@
     display: block;
   }
 }
+
+
+.vjs-http-source-selector {
+  .vjs-icon-placeholder::before {
+    font-family: VideoJS;
+    font-weight: normal;
+    font-style: normal;
+    content: "\f110";
+  }
+}
